Added more models and added planetary system function

--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -15,4 +15,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Moons\" />
+    <Folder Include="Models\Minerals\" />
+    <Folder Include="Models\Satellites\" />
+    <Folder Include="Views\Moons\" />
+    <Folder Include="Views\Minerals\" />
+    <Folder Include="Views\Satellites\" />
+  </ItemGroup>
+
 </Project>
